<resources>
    <string name="app_name">InventoryApp</string>
    <string name="add_product">Add product</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="product_name">Product name</string>
    <string name="product_price">Product price</string>
    <string name="product_quantity">Product quantity</string>
    <string name="product_supplier">Supplier email</string>
    <string name="product_image">Change</string>
    <string name="product_delete">Delete product</string>
    <string name="confirm_delete_msg">Do you want to delete this product ?</string>
    <string name="yes_msg">Yes</string>
    <string name="no_msg">No</string>
    <string name="confirm_quantity_updated">Product quantity updated</string>
    <string name="confirm_quantity_warning">Input must be positive</string>
    <string name="order">Order</string>
    <string name="empty_product">No product available</string>
</resources>
