<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="16dp"
    android:orientation="vertical"
    tools:context="com.udacity.inventoryapp.ProductDetail">

    <!-- TODO: Update blank fragment layout -->
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:showDividers="beginning">
        <TableRow android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_horizontal_margin">
            <TextView android:text="@string/product_name"
                />
            <TextView android:id="@+id/productName"
                android:layout_marginLeft="16dp"
                android:text="placeholder"/>
        </TableRow>
        <TableRow android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_horizontal_margin">
            <TextView android:text="@string/product_price"
                />
            <TextView android:id="@+id/productPrice"
                android:layout_marginLeft="16dp"
                android:text="placeholder"/>
        </TableRow>
        <TableRow android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_horizontal_margin">
            <TextView android:text="@string/product_quantity"
                />
            <EditText android:id="@+id/productQuantity"
                android:inputType="number"
                android:layout_marginLeft="16dp"
                android:text=""/>
            <Button
                android:id="@+id/btUpdate"
                android:text="Update"
                android:layout_marginLeft="16dp"
                />
        </TableRow>
        <TableRow android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_horizontal_margin">
            <TextView android:text="@string/product_supplier"
                />
            <TextView android:id="@+id/productSupplier"
                android:layout_marginLeft="16dp"
                android:text="placeholder"/>
            <Button
                android:id="@+id/btOrder"
                android:text="@string/order"
                android:layout_marginLeft="16dp"
                />
        </TableRow>
    </TableLayout>
<Button
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/product_delete"
    android:id="@+id/bt_delete"/>
</LinearLayout>
